--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +21,7 @@
     "express-fileupload": "^1.2.0",
     "image-size": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.16",
+    "mongoose": "^5.13.16",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.6",
     "sharp": "^0.28.1",
