--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
     "@types/node-cron": "^2.0.3",
-    "@types/sharp": "^0.28.0"
+    "@types/sharp": "^0.28.0",
+    "typescript": "~4.0.2"
   }
 }
