Finish Register. Added checkEmail and checkUsername

--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
     "@types/node-cron": "^2.0.3",
-    "@types/sharp": "^0.28.0",
+    "@types/sharp": "^0.28.0"
   }
 }
